Add tinkoff internship tasks